crates/daemon/tests/snapshots/cli_help__cli_help_accounts_test.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Test account connectivity

Usage: mxr accounts test [OPTIONS] <NAME>

Arguments:
  <NAME>

Options:
      --format <FORMAT>  Output format for `accounts` (the no-subcommand listing) [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
