crates/daemon/tests/snapshots/cli_help__cli_help_activity_pause.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Pause recording. With `--for DURATION`, auto-resumes after

Usage: mxr activity pause [OPTIONS]

Options:
      --for <FOR>
      --quiet
  -h, --help       Print help
