crates/daemon/tests/snapshots/cli_help__cli_help_activity_recall.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Resolve a fuzzy time phrase ("yesterday afternoon", "last hour") and list activity from that window

Usage: mxr activity recall [OPTIONS] <PHRASE>

Arguments:
  <PHRASE>  Time phrase to resolve

Options:
      --limit <LIMIT>    [default: 50]
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
