crates/daemon/tests/snapshots/cli_help__cli_help_activity_resume.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Resume recording

Usage: mxr activity resume

Options:
  -h, --help  Print help
